--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,18 @@ body {
   vertical-align: middle;
 }
 
+section {
+  padding: 50px
+}
+
+h2 {
+  color: white
+}
+
 .colored {
-  background-color: cyan
+  background-color: #7ea2aa;
+}
+
+.avatar {
+  border-radius: 100%;
 }
