--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,96 @@
 body {
-  vertical-align: middle;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 18px;
+  color: #2f3e46
 }
 
 section {
-  padding: 50px
+  padding: 50px;
 }
 
-h2 {
-  color: white
+.title-light {
+  color: #cad2c5;
+  padding: 20px;
+}
+
+.title-dark {
+  color: #354f52;
+  padding: 20px;
+}
+
+.card {
+  margin: 0 0 20px 20px;
 }
 
 .colored {
-  background-color: #7ea2aa;
+  background-color: #354f52;
 }
 
 .avatar {
   border-radius: 100%;
+  margin: 0 50px
+}
+
+.description-box {
+  padding: 0 0 40px 40px;
+}
+
+.bottom-container {
+  text-align: center;
+}
+
+.content {
+  margin-top: 8em
+}
+
+.subtitle {
+  font-size: 30px;
+  text-align: right;
+}
+
+#title {
+  height: 100vh;
+  color: #cad2c5;
+}
+
+#title h2 {
+  text-align: right;
+  font-size: 70px;
+  font-family: 'Spectral', serif;
+}
+
+
+#contacts {
+  text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+  .subtitle {
+    display: none;
+  }
+
+  #title {
+    padding-top: 100px;
+    text-align: center;
+  }
+
+  #title h2 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .avatar {
+    border-radius: 100%;
+    width: 120px;
+  }
+
+  #title {
+    padding-top: 100px;
+    text-align: center;
+  }
+
+  #title h2 {
+    text-align: center;
+  }
 }
