--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ section {
   margin: 0 0 20px 20px;
 }
 
+.card-img-top {
+  background-color: lightgray;
+}
+
 .btn-color {
   background-color: #2f3e46;
 }
@@ -117,7 +121,7 @@ section {
     display: none;
   }
 
-  .card-img-top {
+  .card-hide-image {
     display: none;
   }
 }
